--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+# Server
+server.port=8081
+server.servlet.context-path=/
 
+# Database
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres?currentSchema=etl}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:admin}
+
+# Kafka
+spring.kafka.bootstrap-servers=localhost
+spring.kafka.topic-name=data
+
+# Logging
+logging.level.root=INFO
+logging.level.org.springframework.security=DEBUG
+server.error.include-message=always
+server.error.include-binding-errors=always
+
+# Enable hidden methods
+spring.mvc.hiddenmethod.filter.enabled=true
