Add WebClient, exceptions, http methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,4 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 # Service
 service.replication.page-size=1000
+business.data.server.address=localhost:8080/
